# kernel

./: Cargo.toml  README.md  rustfmt.toml  target_config  x
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.helix/: languages.toml
allocators/src/: lib.rs
kernel/: Cargo.toml
kernel/.helix/: languages.toml
kernel/src/: logging.rs  main.rs
kernel/src/arch/: io.rs  mod.rs
kernel/src/boot/: mod.rs  x86.rs
kernel/src/mem/: heap.rs  mod.rs  physical.rs
kernel/src/mem/paging/: mod.rs  x86.rs
multiboot/: Cargo.toml
multiboot/src/: header.rs  lib.rs  mmap.rs  module.rs
skel/boot/: limine.conf
src/: logging.rs  main.rs
src/boot/: mod.rs  multiboot.rs  x86.rs
src/mem/: fmt.rs  mod.rs  physical.rs
src/mem/paging/: mod.rs
target_config/: x86.json  x86.ld
types/: Cargo.toml
types/src/: fmt.rs  lib.rs  mem.rs
